<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/join"
        android:contentDescription="@string/welcome_image" />

    <TextView
        android:id="@+id/txt_instruction_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        style="@style/text_style" />

    <TextView
        android:id="@+id/txt_join"
        style="@style/text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btn_style"
        android:layout_margin="@dimen/margin_wide"
        android:layout_gravity="end"
        android:fontFamily="cursive"
        android:text="@string/letgo" />


</LinearLayout>