<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
    here i used linear layout design because it is a simple layout

    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="18dp"
        android:gravity="center"
        android:orientation="vertical">
        <!--here I Already made the textview (Labels) but commented it because i use
        hint in edittext -->
        <!--    <TextView-->
        <!--        android:id="@+id/txt_email"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/email" />-->
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/image_login"
            android:src="@drawable/shoeApp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
        <!--here I Already made the textview (Labels) but commented it because i use
          hint in edittext -->
        <!--    <TextView-->
        <!--        android:id="@+id/txt_password"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/password" />-->

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_create"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register" />

        <Button
            android:id="@+id/btn_login"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>
</ScrollView>